<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <org.tiqr.authenticator.general.HeaderView
        android:id="@+id/headerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_below="@+id/headerView"
		android:layout_above="@+id/confirm_button">

		<LinearLayout android:orientation="vertical"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content">

			<LinearLayout
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="20dp">
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/confirm_account_activation" android:textStyle="bold"
					android:id="@+id/title" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activate_following_account"
					android:id="@+id/description" android:paddingBottom="10dp" />
			</LinearLayout>

			<LinearLayout
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="20dp">
				<TextView android:layout_width="fill_parent"
						  android:layout_height="wrap_content"
						  android:text="@string/enroll_account_details"/>
				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_width="0dp"
							  android:layout_height="wrap_content"
							  android:layout_weight="1"
							  android:text="@string/full_name"
							  android:textStyle="bold"/>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/display_name"
					tools:text="&lt;identity display name&gt;" />
				</LinearLayout>
				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_width="0dp"
							  android:layout_height="wrap_content"
							  android:layout_weight="1"
							  android:text="@string/tiqr_id"
							  android:textStyle="bold"/>
				<TextView android:id="@+id/identity_provider_name"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          tools:text="&lt;identity provider display name&gt;" />
					</LinearLayout>
			</LinearLayout>

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="20dp">
				<TextView android:layout_width="fill_parent"
					android:gravity="left" android:layout_height="wrap_content"
					android:textSize="14dp" android:id="@+id/enrollment_url_domain_label"
					android:text="@string/enroll_following_domain" />
				<TextView android:id="@+id/enrollment_url_domain"
					android:paddingTop="3dp" android:gravity="left" android:textSize="12dp"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
                    tools:text="&lt;enrollment url domain&gt;" android:textStyle="bold" />
			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<Button android:id="@+id/confirm_button"
			style="@style/SurfnetPrimaryButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/cancel_button"
			android:text="@string/ok_button" />

    <Button android:id="@+id/cancel_button"
            style="@style/SurfnetSecondaryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/fallbackFooterView"
            android:text="@string/cancel_button" />

    <org.tiqr.authenticator.general.FooterView
        android:id="@+id/fallbackFooterView" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>