<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <org.tiqr.authenticator.general.HeaderView
        android:id="@+id/headerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/confirm_button"
        android:layout_below="@+id/headerView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_fallback_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_fallback_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/identifier_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fallback_identifier_label" />

                <TextView
                    android:id="@+id/identifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="&lt;identifier&gt;" />

                <TextView
                    android:id="@+id/otp_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_label" />

                <TextView
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm_button"
        style="@style/SurfnetButton.Primary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fallbackFooterView"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ok_button" />

    <org.tiqr.authenticator.general.FooterView
        android:id="@+id/fallbackFooterView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>