<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/fingerprint_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <org.tiqr.authenticator.general.HeaderView
        android:id="@+id/headerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/intro_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/fingerprint_intro"
            android:textStyle="bold"
            tools:text="Confirm fingerprint to continue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/fingerprint"
            android:drawablePadding="12dip"
            android:gravity="center"
            android:text="@string/touch_sensor"
            android:textSize="14sp"
            tools:text="Touch sensor"/>

        <TextView
            android:id="@+id/pincodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/use_pincode"
            />
    </RelativeLayout>
</LinearLayout>